--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "postinstall": "husky install",
     "serve": "parcel serve src/index.html",
+    "prebuild": "rm -rf dist",
     "build": "parcel build src/index.html",
     "lint": "concurrently npm:lint:*",
     "lint:commit": "commitlint --from origin/main --to HEAD --verbose",
