--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "eslint-plugin-react": "^7.24.0",
     "husky": "^7.0.1",
     "lint-staged": "^11.1.1",
-    "parcel": "^2.0.0-beta.2",
+    "parcel-bundler": "^1.12.5",
     "prettier": "^2.3.2",
     "sass": "^1.37.0",
     "stylelint": "^13.13.1",
