--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
-    "@parcel/transformer-sass": "^2.0.0-beta.2",
+    "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "commitizen": "^4.2.4",
     "concurrently": "^6.2.0",
@@ -41,6 +41,7 @@
     "husky": "^7.0.1",
     "lint-staged": "^11.1.1",
     "parcel-bundler": "^1.12.5",
+    "postcss-modules": "^3.2.2",
     "prettier": "^2.3.2",
     "sass": "^1.37.0",
     "stylelint": "^13.13.1",
