--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@parcel/transformer-sass": "^2.0.0-rc.0",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "commitizen": "^4.2.4",
@@ -46,8 +47,8 @@
     "eslint-plugin-react": "^7.24.0",
     "husky": "^7.0.1",
     "lint-staged": "^11.1.1",
-    "parcel-bundler": "^1.12.5",
-    "postcss-modules": "^3.2.2",
+    "parcel": "^2.0.0-rc.0",
+    "postcss": "^8.3.6",
     "prettier": "^2.3.2",
     "sass": "^1.37.0",
     "stylelint": "^13.13.1",
