--- a/.postcssrc.json
+++ b/.postcssrc.json
@@ -1,6 +1,9 @@
 {
   "modules": true,
   "plugins": {
-    "autoprefixer": true
+    "autoprefixer": true,
+    "postcss-modules": {
+      "generateScopedName": "_a_[name]__[local]___[hash:base64:5]"
+    }
   }
 }
